--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- cover -->
         <div class="d-flex bg-primary">
             <div class="container d-flex w-100 h-100 mx-auto ">
-                <div class="flex-grow-1  px-3 text-white">
+                <div class="flex-grow-1 pt-7 pe-7   text-white">
                        <span class="fs-9">Your Dream is here</span>
                         <h1 >We Make Buildings </h1>
                         <p class="lead fs-8">Lorem ipsum site color,it coz happen anything lorem ipsum is a high chanllenge there is  </p>
@@ -72,7 +72,7 @@
                           <a href="#" class="btn btn-md btn-secondary py-3 fw-bold border-white bg-white text-primary">Read more</a>
                         </p>
                 </div>
-                <div class="flex-shrink-0">
+                <div class="flex-shrink-0 ps-7">
                   <img src="assets/video-pic.png" alt="...">
                 </div>
             </div>
