--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <!-- css style -->
     <link href="css/main.min.css" rel="stylesheet">
     <!-- js style -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka8Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- font family -->
@@ -24,9 +22,10 @@
 <body>
 
     <!-- header -->
-    <header >
+    <header class=" bg-primary" >
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary pt-8 pb-9 pb-0">
+        <nav class="navbar navbar-expand-lg navbar-light  pt-8 mb-9 pb-0">
+            <!-- mt-8 mb-9  -->
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/logo.png" alt="">
@@ -39,22 +38,22 @@
                 <div class="collapse navbar-collapse   " id="navbarSupportedContent">
                     <ul class="navbar-nav  ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-8 active  text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link me-10 fs-8 lh-sm fw-bold ctive  text-white" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-8  text-white" href="#">Blog</a>
+                            <a class="nav-link me-10 fs-8 lh-sm fw-bold text-white" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-8  text-white" href="#">Client</a>
+                            <a class="nav-link me-5 fs-8 lh-sm fw-bold text-white" href="#">Client</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 fs-8  text-white" href="#">Service</a>
+                            <a class="nav-link me-10 fs-8 lh-sm fw-bold text-white" href="#">Service</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-6 fs-8  text-white" href="#">About us</a>
+                            <a class="nav-link me-7 fs-8 lh-sm fw-bold text-white" href="#">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="btn fs-8 py-2 px-5 btn-md btn-secondary fw-bold border-white bg-white text-primary">contact us</a>
+                            <a href="#" class="btn  btn-md btn-secondary fw-bold border-white bg-white text-primary fs-8  py-2 px-10">contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -62,24 +61,91 @@
         </nav>
     
         <!-- cover -->
-        <div class="d-flex bg-primary">
-            <div class="container d-flex w-100 h-100 mx-auto ">
-                <div class="flex-grow-1 pt-7 pe-7   text-white">
-                       <span class="fs-9">Your Dream is here</span>
-                        <h1 >We Make Buildings </h1>
-                        <p class="lead fs-8">Lorem ipsum site color,it coz happen anything lorem ipsum is a high chanllenge there is  </p>
+        <div class="d-flex ">
+            <div class="container d-flex w-100 h-100 mx-auto mb-9 flex-lg-nowrap flex-wrap">
+                <div class="flex-grow-1  text-white pt-11 pe-11">
+                       <span class="fs-3 d-inline-block  fw-bold lh-sm mb-12">Your Dream is here</span>
+                        <h1 class="mb-3 fs-1 lh-sm fw-bolder">We Make Buildings </h1>
+                        <p class=" fs-8 mb-6 lh-base">Lorem ipsum site dolor,it coz happen anything lorem ipsum is a high chanllenge there is  </p>
                         <p class="lead">
-                          <a href="#" class="btn btn-md btn-secondary py-3 fw-bold border-white bg-white text-primary">Read more</a>
+                          <a href="#" class="btn btn-md btn-secondary  fw-bold border-white bg-white text-primary fs-8  py-2 px-10" style="letter-spacing: -.6px;">Read more</a>
                         </p>
                 </div>
-                <div class="flex-shrink-0 ps-7">
-                  <img src="assets/video-pic.png" alt="...">
+                <div class="flex-shrink-0   ">
+                  <img class="img-fluid" src="assets/video-pic.png" alt="...">
                 </div>
             </div>
-          </div>
+        </div>
+        <!-- select -->
+            <div class="container pb-13 pt-1 d-flex justify-content-center ">
 
+                <!-- 1 -->
+                <div class="dropdown pe-4 ">
+                    <button class="btn btn-md btn-secondary border-white bg-white text-secondary dropdown-toggle fw-bold lh-lg fs-9  py-2 px-7 " type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="px-1">Property Type</span>               
+                     
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="dropdownMenuButton2">
+                      <li><a class="dropdown-item active" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+                <!-- 2 -->
+                <div class="dropdown pe-5 ">
+                    <button class="btn btn-md btn-secondary  border-white bg-white text-secondary dropdown-toggle fw-bold lh-lg fs-9  py-2 px-7" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="px-3">Select City</span>               
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="dropdownMenuButton2">
+                      <li><a class="dropdown-item active" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+                <!-- 3 -->
+                <a href="#" class="btn btn-md btn-secondary  fw-bold border-white bg-white text-primary fs-8  py-2 px-6" style="letter-spacing: -.6px;">
+                    <span class="px-2"> Search </span>
+                    </a>
+
+            </div>           
     </header>
 
+    <!-- section services -->
+    <section class="bg-altlight   pt-8 mb-14 d-flex   justify-content-evenly">
+        <!-- 1 -->
+        <div style="width: 17.5rem;">
+            <img src="assets/Icon1.png" class="img-fluid mb-12" alt="...">
+            <div class="">
+              <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+            </div>
+            <div class=" fs-8 lh-sm ">
+              <a href="#" class="text-decoration-none">Read more</a>
+            </div>
+          </div>
+        <!-- 2 -->
+        <div style="width: 17.5rem;">
+            <img src="assets/Icon2.png" class="img-fluid mb-12" alt="...">
+            <div class="">
+              <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+            </div>
+            <div class=" fs-8 lh-sm ">
+              <a href="#" class="text-decoration-none">Read more</a>
+            </div>
+          </div>
+        <!-- 3-->
+        <div style="width: 17.5rem;">
+            <img src="assets/Icon3.png" class="img-fluid mb-12" alt="...">
+            <div class="">
+              <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+            </div>
+            <div class=" fs-8 lh-sm ">
+              <a href="#" class="text-decoration-none">Read more</a>
+            </div>
+          </div>
+    </section>
 
 
 </body>
