--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- cover -->
         <div class="d-flex ">
             <div class="container d-flex w-100 h-100 mx-auto mb-9 flex-lg-nowrap flex-wrap">
-                <div class="flex-grow-1  text-white pt-11 pe-11">
+                <div class="flex-grow-1  text-white pt-11 me-11">
                        <span class="fs-3 d-inline-block  fw-bold lh-sm mb-12">Your Dream is here</span>
                         <h1 class="mb-3 fs-1 lh-sm fw-bolder">We Make Buildings </h1>
                         <p class=" fs-8 mb-6 lh-base">Lorem ipsum site dolor,it coz happen anything lorem ipsum is a high chanllenge there is  </p>
@@ -111,38 +111,63 @@
     </header>
 
     <!-- section services -->
-    <section class="bg-altlight   pt-8 mb-14 d-flex   justify-content-evenly">
+    <section class="bg-altlight   pt-8 pb-14  mb-8 d-flex   justify-content-evenly">
         <!-- 1 -->
-        <div style="width: 17.5rem;">
+        <div style="width:20rem;">
             <img src="assets/Icon1.png" class="img-fluid mb-12" alt="...">
             <div class="">
               <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
-              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores.</p>
             </div>
             <div class=" fs-8 lh-sm ">
               <a href="#" class="text-decoration-none">Read more</a>
             </div>
           </div>
         <!-- 2 -->
-        <div style="width: 17.5rem;">
+        <div style="width:20rem;">
             <img src="assets/Icon2.png" class="img-fluid mb-12" alt="...">
             <div class="">
               <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
-              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores.</p>
             </div>
             <div class=" fs-8 lh-sm ">
               <a href="#" class="text-decoration-none">Read more</a>
             </div>
           </div>
         <!-- 3-->
-        <div style="width: 17.5rem;">
+        <div style="width:20rem;">
             <img src="assets/Icon3.png" class="img-fluid mb-12" alt="...">
             <div class="">
               <h5 class="fs-6 lh-sm  fw-bold mb-3">Modern Recident</h5>
-              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores dignissimos recusandae.</p>
+              <p  class="fs-9 lh-sm mb-12 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt sequi dolor asperiores.</p>
             </div>
             <div class=" fs-8 lh-sm ">
               <a href="#" class="text-decoration-none">Read more</a>
+            </div>
+          </div>
+    </section>
+
+    <!-- feature sectiom -->
+    <section class="feature-section d-flex  justify-content-center mb-8 ">
+            <div  style="width: 40rem;" class="pt-2">
+                <h5 class="text-capitalize fw-bolder fs-3 lh-sm text-center">paid featured posts</h5>
+                <p class="lh-base fs-9 text-center ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, labore? Amet totam cum aut temporibus officiis magni tempore itaque earum!</p>
+            </div>
+    </section>
+
+    <section class=" d-flex  justify-content-center  align-items-center pt-1">     
+        <div class=" mb-3" style="max-width: 71rem;">
+            <div class="row g-0 ">
+              <div class="col-sm-6 pe-10">
+                <img src="assets/feature-img.png" class="img-fluid rounded-start " alt="...">
+              </div>
+              <div class="col-sm-6">
+                <div class="">
+                  <h5 class="">Card title</h5>
+                  <p class="">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class=""><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
             </div>
           </div>
     </section>
